Bug 1817240 - Cherry-pick ANGLE skylake clearview fix. r=gfx-reviewers,lsalzman

Also fix update-angle.py:
* Use shell=True to get ninja to run
* Don't record "/PDBSourcePath:" because it depends on configuration of
  the vendoring machine and is otherwise unused, and so uselessly causes
  blame noise.

Differential Revision: https://phabricator.services.mozilla.com/D171824